--- a/greeting.html
+++ b/greeting.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>My First React App</title>
+    <title>My First React app</title>
   </head>
   <body>
 
-    <h2>Add Button</h2>
+    <div id="app"></div>
 
-<button type="button" onclick="alert('This button')">Click Me!</button>
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    <script src="like_button.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.1.0/umd/react.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.1.0/umd/react-dom.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
 
+    <script type="text/babel">
+       class Statement extends React.Component {
+         render() {
+           return (
+             <div>
+               <h1>I did it!</h1>
+             </div>
+           );
+         }
+       }
+ 
+       ReactDOM.render(
+         <Statement />, document.getElementById('app')
+       );
+    </script>
   </body>
 </html>
